--- a/templates/main.html
+++ b/templates/main.html
@@ -16,7 +16,10 @@
   <!-- Izquierda -->
 
   <!-- Centro -->
-  <div class="colorPrueba fadeIn first mx-auto align-self-start">
+  <div
+    class="colorPrueba fadeIn first mx-auto align-self-start"
+    onload="lalala()"
+  >
     <ul class="list-group">
       <li class="list-group-item">
         Humedad: <span class=" ml-3" id="hum"></span>
