--- a/templates/main.html
+++ b/templates/main.html
@@ -16,10 +16,7 @@
   <!-- Izquierda -->
 
   <!-- Centro -->
-  <div
-    class="colorPrueba fadeIn first mx-auto align-self-start"
-    onload="lalala()"
-  >
+  <div class="colorPrueba fadeIn first mx-auto align-self-start">
     <ul class="list-group">
       <li class="list-group-item">
         Humedad: <span class=" ml-3" id="hum"></span>
