--- a/templates/estadoScp.html
+++ b/templates/estadoScp.html
@@ -1,26 +1,26 @@
-<script>
-  function lalala() {
-    fetch("/state")
-      .then(res => res.json())
-      .then(out => {
-        humedad = data.humedad;
-        temperatura = data.temperatura;
-        distancia = data.distancia;
-        movimiento = data.movimiento;
-        alarma = data.alarma;
-        temperaturaCPU = data.temperaturaCPU;
-        usoCPU = data.usoCPU;
-        document.getElementById("hum").innerHTML = humedad.substr(20);
-        document.getElementById("tem").innerHTML = temperatura.substr(20);
-        document.getElementById("dis").innerHTML = distancia.substr(20);
-        document.getElementById("av").innerHTML = movimiento.substr(20);
-        document.getElementById("al").innerHTML = alarma.substr(20);
-        document.getElementById("cpuT").innerHTML = temperaturaCPU.substr(20);
-        document.getElementById("cpu").innerHTML = usoCPU.substr(20);
-      })
-      .catch(error => console.error("Error al obtener datos de estadísticas"));
-
-    var tt = setTimeout(lalala, 10000);
-  }
-  window.onload = lalala;
+<script type="text/javascript">
+  $(document).ready(function() {
+    function datosS() {
+      fetch("/state")
+        .then(res => res.json())
+        .then(out => {
+          humedad = data.humedad;
+          temperatura = data.temperatura;
+          distancia = data.distancia;
+          movimiento = data.movimiento;
+          alarma = data.alarma;
+          temperaturaCPU = data.temperaturaCPU;
+          usoCPU = data.usoCPU;
+          document.getElementById("hum").innerHTML = humedad.substr(20);
+          document.getElementById("tem").innerHTML = temperatura.substr(20);
+          document.getElementById("dis").innerHTML = distancia.substr(20);
+          document.getElementById("av").innerHTML = movimiento.substr(20);
+          document.getElementById("al").innerHTML = alarma.substr(20);
+          document.getElementById("cpuT").innerHTML = temperaturaCPU.substr(20);
+          document.getElementById("cpu").innerHTML = usoCPU.substr(20);
+        })
+        .catch(error => console.error("Error al obtener datos del sistema"));
+    }
+    setInterval(datosS, 3000);
+  });
 </script>
