--- a/templates/main.html
+++ b/templates/main.html
@@ -28,7 +28,7 @@
         Distancia: <span class=" ml-3" id="dis"></span>
       </li>
       <li class="list-group-item">
-        Aviso: <span class=" ml-3" id="av"></span>
+        Último Movimiento detectado: <span class=" ml-3" id="av"></span>
       </li>
       <li class="list-group-item">
         Alarma: <span class=" ml-3" id="al"></span>
