--- a/templates/flash.html
+++ b/templates/flash.html
@@ -3,7 +3,7 @@
       <ul class=flashes></ul>
       {% for category, message in messages %}
         <div class="alert alert-dismissible alert-{{ category }} fade show" role="alert">
-          <li class="{{ category }}">{{ message }}</li>
+          <li class="{{ category }}"> <strong>{{ message }}</strong></li>
           <button
             type="button"
             class="close"
