--- a/templates/main.html
+++ b/templates/main.html
@@ -22,7 +22,7 @@
         Humedad: <span class=" ml-3" id="hum"></span>
       </li>
       <li class="list-group-item">
-        Temperatura: <span class=" ml-3" id="tem"></span>
+        Temperatura exterior: <span class=" ml-3" id="tem"></span>
       </li>
       <li class="list-group-item">
         Distancia: <span class=" ml-3" id="dis"></span>
