--- a/templates/pruebaa.html
+++ b/templates/pruebaa.html
@@ -21,67 +21,66 @@
     <p id="caption">The chart is displaying a simple line chart.</p>
 
     <script>
-      console.log()
-         var timeFormat = 'hh:mm:ss';
+      var timeFormat = 'HH:mm:ss';
 
-         function newDateString(hours, minutes, seconds) {
-             return moment().hour(hours).minute(minutes).second(seconds).format(timeFormat);
-           }
-                              // Global parameters:
-                        // do not resize the chart canvas when its container does (keep at 600x400px)
-                        Chart.defaults.global.responsive = false;
+      function newDateString(hours, minutes, seconds) {
+          return moment().hour(hours).minute(minutes).second(seconds).format(timeFormat);
+        }
+                           // Global parameters:
+                     // do not resize the chart canvas when its container does (keep at 600x400px)
+                     Chart.defaults.global.responsive = false;
 
-                         // define the chart data
-             var chartData = {
+                      // define the chart data
+          var chartData = {
 
-          labels : [{% for item in labels %}
+       labels : [{% for item in labels %}
 
-                  newDateString( {{item.0}}, {{item.1}}, {{item.2}} ),
-                 {% endfor %}],
-               datasets : [{
-            	   label: '{{ legend }}',
-            	   fill: true,
-            	   lineTension: 0.1,
-            	   backgroundColor: "rgba(75,192,192,0.4)",
-            	   borderColor: "rgba(75,192,192,1)",
-            	   borderCapStyle: 'butt',
-            	   borderDash: [],
-            	   borderDashOffset: 0.0,
-            	   borderJoinStyle: 'miter',
-            	   pointBorderColor: "rgba(75,192,192,1)",
-            	   pointBackgroundColor: "#fff",
-            	   pointBorderWidth: 1,
-            	   pointHoverRadius: 5,
-            	   pointHoverBackgroundColor: "rgba(75,192,192,1)",
-            	   pointHoverBorderColor: "rgba(220,220,220,1)",
-            	   pointHoverBorderWidth: 2,
-            	   pointRadius: 1,
-            	   pointHitRadius: 10,
-            	   data : [{% for item in values %}
-            				 {{item}},
-            			   {% endfor %}],
-            	   spanGaps: false
-               }]
+               newDateString( {{item.0}}, {{item.1}}, {{item.2}} ),
+              {% endfor %}],
+            datasets : [{
+         	   label: '{{ legend }}',
+         	   fill: true,
+         	   lineTension: 0.1,
+         	   backgroundColor: "rgba(75,192,192,0.4)",
+         	   borderColor: "rgba(75,192,192,1)",
+         	   borderCapStyle: 'butt',
+         	   borderDash: [],
+         	   borderDashOffset: 0.0,
+         	   borderJoinStyle: 'miter',
+         	   pointBorderColor: "rgba(75,192,192,1)",
+         	   pointBackgroundColor: "#fff",
+         	   pointBorderWidth: 1,
+         	   pointHoverRadius: 5,
+         	   pointHoverBackgroundColor: "rgba(75,192,192,1)",
+         	   pointHoverBorderColor: "rgba(220,220,220,1)",
+         	   pointHoverBorderWidth: 2,
+         	   pointRadius: 1,
+         	   pointHitRadius: 10,
+         	   data : [{% for item in values %}
+         				 {{item}},
+         			   {% endfor %}],
+         	   spanGaps: false
+            }]
+          }
+
+              // get chart canvas
+              var ctx = document.getElementById("myChart").getContext("2d");
+              // create the chart using the chart canvas
+              var myChart = new Chart(ctx, {
+         		type: 'line',
+         		data: chartData,
+         		options: {
+           		tooltips: {
+             	enabled: true,
+             	mode: 'single',
+             	callbacks: {
+             	label: function(tooltipItems, data) {
+             			return tooltipItems.yLabel + ' Grados Centígrados';
+             			}
+             	}
+             },
              }
-
-                 // get chart canvas
-                 var ctx = document.getElementById("myChart").getContext("2d");
-                 // create the chart using the chart canvas
-                 var myChart = new Chart(ctx, {
-            		type: 'line',
-            		data: chartData,
-            		options: {
-              		tooltips: {
-                	enabled: true,
-                	mode: 'single',
-                	callbacks: {
-                	label: function(tooltipItems, data) {
-                			return tooltipItems.yLabel + ' Grados Centígrados';
-                			}
-                	}
-                },
-                }
-                  });
+               });
     </script>
   </body>
 </html>
