--- a/templates/estadisticas.html
+++ b/templates/estadisticas.html
@@ -7,7 +7,7 @@
       id="general3"
     >
       <!-- Button trigger modal -->
-      <canvas id="myChart"></canvas>
+      <canvas id="canvas"></canvas>
     </div>
     <div class="col align-self-start">
       <div class="wrapper fadeInDown">
