--- a/templates/estadoScp.html
+++ b/templates/estadoScp.html
@@ -19,7 +19,7 @@
         document.getElementById("tem").innerHTML = temperatura.substr(20);
         document.getElementById("dis").innerHTML = distancia.substr(20);
         document.getElementById("av").innerHTML = movimiento.substr(0, 19);
-        alarmaText = alarma.substr(20) + " Fecha : " + alarma.substr(20);
+        alarmaText = alarma.substr(20) + " Fecha : " + alarma.substr(0, 19);
         document.getElementById("al").innerHTML = alarmaText;
         document.getElementById("cpuT").innerHTML = temperaturaCPU.substr(20);
         document.getElementById("cpu").innerHTML = usoCPU.substr(20);
