--- a/templates/main.html
+++ b/templates/main.html
@@ -45,8 +45,8 @@
 
   {{ agenda | safe }}
 </div>
-
-{% endblock %} {% block script %} {% include "estadoScp.html" %}
+{% include "log.html" %} {% endblock %} {% block script %} {% include
+"estadoScp.html" %}
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
