--- a/templates/log.html
+++ b/templates/log.html
@@ -59,8 +59,8 @@
           id="exampleFormControlTextarea2"
           rows="5"
         >
-        {{ agenda | safe }}</textarea
-        >
+        {{ historia | safe }}
+        </textarea>
       </div>
     </div>
   </div>
@@ -70,6 +70,6 @@
     role="tabpanel"
     aria-labelledby="contact-tab"
   >
-    {{ datos | safe }}
+    {{ agenda | safe }}
   </div>
 </div>
