--- a/templates/log.html
+++ b/templates/log.html
@@ -59,7 +59,7 @@
           id="exampleFormControlTextarea2"
           rows="5"
         >
-        {{ historia | safe }}
+        {{ historia }}
         </textarea>
       </div>
     </div>
