--- a/templates/log.html
+++ b/templates/log.html
@@ -51,15 +51,14 @@
     role="tabpanel"
     aria-labelledby="profile-tab"
   >
-    <div class="wrapper">
+    <div class="">
       <div class="form-group">
         <label for="exampleFormControlTextarea2">WATCH MY SCROLLBAR</label>
         <textarea
           class="form-control rounded-0"
           id="exampleFormControlTextarea2"
           rows="5"
-        >
-        {{ datos }}
+          >{{ datos }}
         </textarea>
       </div>
     </div>
