--- a/templates/log.html
+++ b/templates/log.html
@@ -58,7 +58,7 @@
           class="form-control rounded-0"
           id="exampleFormControlTextarea2"
           rows="5"
-          >{{ datos }}
+          >{{ datos.3 }}
         </textarea>
       </div>
     </div>
