--- a/templates/log.html
+++ b/templates/log.html
@@ -53,12 +53,11 @@
   >
     <div class="">
       <div class="form-group">
-        <label for="exampleFormControlTextarea2">WATCH MY SCROLLBAR</label>
         <textarea
           class="form-control rounded-0"
           id="exampleFormControlTextarea2"
           rows="5"
-          >{{ datos }}
+          >{{ alarma }}
         </textarea>
       </div>
     </div>
@@ -69,6 +68,9 @@
     role="tabpanel"
     aria-labelledby="contact-tab"
   >
-    {{ agenda | safe }}
+    <textarea
+      >{{ movimiento }}
+</textarea
+    >
   </div>
 </div>
