--- a/templates/log.html
+++ b/templates/log.html
@@ -69,6 +69,9 @@
     aria-labelledby="contact-tab"
   >
     <textarea
+      class="form-control rounded-0"
+      id="exampleFormControlTextarea2"
+      rows="5"
       >{{ movimiento }}
 </textarea
     >
