--- a/templates/calendarScp.html
+++ b/templates/calendarScp.html
@@ -1,5 +1,6 @@
 <script>
   document.addEventListener("DOMContentLoaded", function() {
+    {% if session["root"] %}
     var x = document.getElementById("Duration");
     var y = document.getElementById("login-2");
     var horas = document.getElementById("horas");
@@ -23,7 +24,7 @@
           minutos.value = "";
         }
       });
-
+      {% endif %}
     var calendarEl = document.getElementById("calendar");
     var calendar = new FullCalendar.Calendar(calendarEl, {
       locale: "es",
@@ -73,7 +74,7 @@
                 document.getElementById("btnBorrar").onclick = function() {
                   doWork();
                 };
-        
+
                 function doWork() {
                   // ajax the JSON to the server
                   $.post("deletEvent", idE, function() {});
@@ -175,7 +176,7 @@
     document.getElementById("autoCerrar").click();
   }
 </script>
-
+{% if session["root"] %}
 <script>
   window.onload = function() {
     refresh();
@@ -355,3 +356,4 @@
     startTime();
   };
 </script>
+{% endif %}
