--- a/templates/pruebaa.html
+++ b/templates/pruebaa.html
@@ -1,86 +1,58 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Time Scale Point Data</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.min.js"></script>
-    <script src="https://www.chartjs.org/dist/2.8.0/Chart.min.js"></script>
-    <script src="https://www.chartjs.org/samples/latest/utils.js"></script>
-    <style>
-      canvas {
-        -moz-user-select: none;
-        -webkit-user-select: none;
-        -ms-user-select: none;
-      }
-    </style>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css"
+    />
+    <script src="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.min.js"
+      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
-    <h1>Simple Line Chart</h1>
-    <!-- bar chart canvas element -->
-    <canvas id="myChart" width="600" height="400"></canvas>
-    <p id="caption">The chart is displaying a simple line chart.</p>
+    <button id="update">Update</button>
+    <div class="ct-chart ct-perfect-fourth"></div>
 
     <script>
-      var timeFormat = 'HH:mm:ss';
+      var myChart;
+      var getData = $.get("/dataD");
 
-      function newDateString(hours, minutes, seconds) {
-          return moment().hour(hours).minute(minutes).second(seconds).format(timeFormat);
-        }
-                           // Global parameters:
-                     // do not resize the chart canvas when its container does (keep at 600x400px)
-                     Chart.defaults.global.responsive = false;
+      getData.done(function(results) {
+        console.log(results.results);
+        var data = {
+          // A labels array that can contain any sort of values
+          labels: ["Mon", "Tue", "Wed", "Thu", "Fri"],
+          // Our series array that contains series objects or in this case series data arrays
 
-                      // define the chart data
-          var chartData = {
+          series: results.results
+        };
 
-       labels : [{% for item in labels %}
+        var options = {
+          width: 800,
+          height: 600
+        };
 
-               newDateString( {{item.0}}, {{item.1}}, {{item.2}} ),
-              {% endfor %}],
-            datasets : [{
-         	   label: '{{ legend }}',
-         	   fill: true,
-         	   lineTension: 0.1,
-         	   backgroundColor: "rgba(75,192,192,0.4)",
-         	   borderColor: "rgba(75,192,192,1)",
-         	   borderCapStyle: 'butt',
-         	   borderDash: [],
-         	   borderDashOffset: 0.0,
-         	   borderJoinStyle: 'miter',
-         	   pointBorderColor: "rgba(75,192,192,1)",
-         	   pointBackgroundColor: "#fff",
-         	   pointBorderWidth: 1,
-         	   pointHoverRadius: 5,
-         	   pointHoverBackgroundColor: "rgba(75,192,192,1)",
-         	   pointHoverBorderColor: "rgba(220,220,220,1)",
-         	   pointHoverBorderWidth: 2,
-         	   pointRadius: 1,
-         	   pointHitRadius: 10,
-         	   data : [{% for item in values %}
-         				 {{item}},
-         			   {% endfor %}],
-         	   spanGaps: false
-            }]
-          }
+        myChart = new Chartist.Line(".ct-chart", data, options);
+      });
 
-              // get chart canvas
-              var ctx = document.getElementById("myChart").getContext("2d");
-              // create the chart using the chart canvas
-              var myChart = new Chart(ctx, {
-         		type: 'line',
-         		data: chartData,
-         		options: {
-           		tooltips: {
-             	enabled: true,
-             	mode: 'single',
-             	callbacks: {
-             	label: function(tooltipItems, data) {
-             			return tooltipItems.yLabel + ' Grados Centígrados';
-             			}
-             	}
-             },
-             }
-               });
+      function updateChart() {
+        var updateData = $.get("/dataD");
+        updateData.done(function(results) {
+          var data = {
+            // A labels array that can contain any sort of values
+            labels: ["Mon", "Tue", "Wed", "Thu", "Fri"],
+            // Our series array that contains series objects or in this case series data arrays
+
+            series: results.results
+          };
+          myChart.update(data);
+        });
+      }
+      $("#update").on("click", updateChart);
     </script>
   </body>
 </html>
