--- a/templates/pruebaa.html
+++ b/templates/pruebaa.html
@@ -44,7 +44,7 @@
         updateData.done(function(results) {
           var data = {
             // A labels array that can contain any sort of values
-            labels: ["Mon", "Tue", "Wed", "Thu", "Fri"],
+            labels: results.labels,
             // Our series array that contains series objects or in this case series data arrays
 
             series: results.results
