--- a/templates/pruebaa.html
+++ b/templates/pruebaa.html
@@ -30,7 +30,7 @@
       }
 
       getData.done(function(results) {
-        console.log(results.labels);
+        console.log(results.labels.length);
         var data = {
           // A labels array that can contain any sort of values
           labels: ["Mon", "Tue", "Wed", "Thu", "Fri"],
@@ -50,6 +50,15 @@
       function updateChart() {
         var updateData = $.get("/dataD");
         updateData.done(function(results) {
+          for (var i = 0; i < results.labels.length; i++) {
+            console.log(
+              newDateString(
+                results.labels[i][0],
+                results.labels[i][1],
+                results.labels[i][2]
+              )
+            );
+          }
           var data = {
             // A labels array that can contain any sort of values
             labels: results.labels,
