--- a/templates/pruebaa.html
+++ b/templates/pruebaa.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.min.js"></script>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css"
