--- a/templates/pruebaa.html
+++ b/templates/pruebaa.html
@@ -59,9 +59,9 @@
               results.labels[i][2]
             );
           }
-          var fechas = {
+          var data = {
             // A labels array that can contain any sort of values
-            labels: datos,
+            labels: fechas,
             // Our series array that contains series objects or in this case series data arrays
 
             series: results.results
