--- a/templates/pruebaa.html
+++ b/templates/pruebaa.html
@@ -40,35 +40,35 @@
           series: results.results
         };
 
-        options: {
-                title: {
-                  text: "Chart.js Time Scale"
+        var options = {
+          title: {
+            text: "Chart.js Time Scale"
+          },
+          scales: {
+            xAxes: [
+              {
+                type: "time",
+                time: {
+                  parser: timeFormat,
+                  // round: 'day'
+                  tooltipFormat: "ll HH:mm"
                 },
-                scales: {
-                  xAxes: [
-                    {
-                      type: "time",
-                      time: {
-                        parser: timeFormat,
-                        // round: 'day'
-                        tooltipFormat: "ll HH:mm"
-                      },
-                      scaleLabel: {
-                        display: true,
-                        labelString: "Date"
-                      }
-                    }
-                  ],
-                  yAxes: [
-                    {
-                      scaleLabel: {
-                        display: true,
-                        labelString: "value"
-                      }
-                    }
-                  ]
+                scaleLabel: {
+                  display: true,
+                  labelString: "Date"
                 }
               }
+            ],
+            yAxes: [
+              {
+                scaleLabel: {
+                  display: true,
+                  labelString: "value"
+                }
+              }
+            ]
+          }
+        };
 
         myChart = new Chartist.Line(".ct-chart", data, options);
       });
