--- a/templates/pruebaa.html
+++ b/templates/pruebaa.html
@@ -50,11 +50,7 @@
           height: 600,
 
           axisX: {
-            type: Chartist.FixedScaleAxis,
-            divisor: 5,
-            labelInterpolationFnc: function(value) {
-              return moment(value).format("ll HH:mm");
-            }
+            type: Chartist.FixedScaleAxis
           }
         };
 
