--- a/templates/pruebaa.html
+++ b/templates/pruebaa.html
@@ -50,16 +50,7 @@
           height: 600,
 
           axisX: {
-            type: "time",
-            time: {
-              parser: timeFormat,
-              // round: 'day'
-              tooltipFormat: "ll HH:mm"
-            },
-            scaleLabel: {
-              display: true,
-              labelString: "Date"
-            }
+            type: time
           }
         };
 
