--- a/templates/pruebaa.html
+++ b/templates/pruebaa.html
@@ -58,35 +58,7 @@
           }
         };
 
-        myChart = new Chartist.Line(".ct-chart", data, {
-          title: {
-            text: "Chart.js Time Scale"
-          },
-          scales: {
-            xAxes: [
-              {
-                type: "time",
-                time: {
-                  parser: timeFormat,
-                  // round: 'day'
-                  tooltipFormat: "ll HH:mm"
-                },
-                scaleLabel: {
-                  display: true,
-                  labelString: "Date"
-                }
-              }
-            ],
-            yAxes: [
-              {
-                scaleLabel: {
-                  display: true,
-                  labelString: "value"
-                }
-              }
-            ]
-          }
-        });
+        myChart = new Chartist.Line(".ct-chart", data, options);
       });
 
       function updateChart() {
@@ -94,7 +66,7 @@
         updateData.done(function(results) {
           var data = {
             // A labels array that can contain any sort of values
-            labels: fechas,
+            labels: dameFecha(results.labels),
             // Our series array that contains series objects or in this case series data arrays
 
             series: results.results
